# models

./: .gitmodules  AAREADME.TXT  Makefile.am  configure.ac  configure.cmd
hwm93/: Makefile.am  driver.f  gws5.f  hwm93.c  hwm93.m  hwm93test.m
igrf95/: AAREADME.TXT  Makefile.am  bilcal.f  igrf95.c  igrf95.m  igrf95test.m  igrf_sub.fpp  shellig.fpp  test.c  update.txt
iri95/: AAREADME.TXT  Makefile.am  iri95.c  iri95.m  iri95test.m  iri_test.f  irif13.fpp  iris13.fpp  irit13.f
msise90/: AAREADME.TXT  Makefile.am  gtd6.f  msise90.c  msise90.m  msise90.txt  msise90test.m  test_driver.f
